--- a/src/html/components/catalog.html
+++ b/src/html/components/catalog.html
@@ -18,5 +18,19 @@
                 <button class="catalog__btn" type="submit">Металические корпуса</button>
             </li>
         </ul>
+        <div class="catalog__items">
+            <div class="catalog__item">
+                <img class="catalog__item-img" src="images/catalog-1.png" alt="Товар">
+                <h3 class="catalog__item-title">
+                    <span class="catalog__item-span">Маслянные 20-10/0,4кВ</span>
+                </h3>
+            </div>
+            <div class="catalog__item">
+                <img class="catalog__item-img" src="images/catalog-2.png" alt="Товар">
+                <h3 class="catalog__item-title">
+                    <span class="catalog__item-span">Сухие 20-10/0,4кВ</span>
+                </h3>
+            </div>
+        </div>
     </div>
 </section>
