--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -1,3 +1,82 @@
 .catalog {
     padding: 100px 0;
+
+    &__btns {
+        display: flex;
+        justify-content: center;
+        margin-top: 70px;
+        margin-bottom: 31px;
+    }
+
+    &__btns-item {
+        padding: 0 20px;
+    }
+
+    &__btn {
+        font-family: "Oswald";
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+        position: relative;
+        transition: transform .5s, color .5s;
+    }
+
+    &__btn::before {
+        content: "";
+        position: absolute;
+        bottom: -3px;
+        left: 50%;
+        transform: translateX(-50%) scale(0);
+        height: 2px;
+        width: 70%;
+        background-color: #CEAB00;
+        transition: transform .5s;
+    }
+
+    &__btn:hover {
+        transform: scale(1.1);
+        color: #CEAB00;
+    }
+
+    &__btn:hover::before {
+        transform: translateX(-50%) scale(1);
+    }
+
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 790px;
+        margin: 0 auto;
+    }
+
+    &__item {
+        position: relative;
+        margin: 0 15px;
+    }
+
+    &__item-img {
+        max-width: 100%;
+    }
+
+    &__item-title {
+        position: absolute;
+        background-color: #FAE060;
+        bottom: 15px;
+        right: 0;
+        padding: 20px 20px 30px;
+        font-family: "Oswald";
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 27px;
+        letter-spacing: 0.05em;
+        text-transform: uppercase;
+    }
+
+    &__item:hover .catalog__item-span {
+        background-image: linear-gradient(to top,#000,#E81A1A);
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
 }
