--- a/src/html/components/reasons.html
+++ b/src/html/components/reasons.html
@@ -12,7 +12,7 @@
                     ПРОЕКТ - ПРОИЗВОДСТВО - ВНЕДРЕНИЕ: берем на себя все стадии для качественного предоставления работ «под ключ».</p>
             </li>
             <li class="reasons__item">
-                <h3 class="reasons__item-title">ВЫ ПОЛУЧАЕТЕ ЭКСПЕРТНУЮ ТЕХНИЧЕСКУЮ ПОДДЕРЖКУ!</h3>
+                <h3 class="reasons__item-title">Вы получаете экспертную техническую поддержку!</h3>
                 <p class="reasons__item-text">
                     Наши специалисты готовы всегда Вам помочь, ответить на любые ваши вопросы, предоставить вам техническую и клиентскую поддержку.</p>
             </li>
