--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -8,7 +8,7 @@
             </div>
             <ul>
                 <li><a href="#">Компания</a></li>
-                <li><a href="#">Продукция</a></li>
+                <li><a href="products.html">Продукция</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Портфолио</a></li>
                 <li><a href="#">Контакты</a></li>
