--- a/src/html/components/about.html
+++ b/src/html/components/about.html
@@ -1,24 +1,30 @@
 <section class="about">
   <div class="container">
-    <h2 class="title">О компании</h2>
-    <div class="about__content">
-      <p>
-        Элкуб это компания, состоящая из опытных руководителей, высоко
-        квалифицированного инженерного и производственного персонала. ООО ПК
-        «Элкуб» является правообладателем торговых марок «ElCub» и «ElSmart».
-      </p>
-      <p>
-        Электрооборудование этих марок аттестовано и успешно эксплуатируется на
-        объектах гражданского строительства, «Росавиации», ПАО «РусГидро», МРСК,
-        ОЭК, ГК «Росатом», РЖД и на других объектах энергетической отрасли.
-      </p>
-      <p>
-        Сегодня ООО ПК «Элкуб» осуществляет полный спектр услуг по производству,
-        проектированию, сопровождению и внедрению объектов энергоснабжения, а
-        собственное производство электротехнического оборудования сокращает срок
-        их реализации, что позволяет устанавливать конкурентные цены.
-      </p>
-    </div>
-    <a class="about__link" href="#">Узнать о нас больше...</a>
+     <div class="about__flex">
+      <div class="about__left">
+         <h2 class="title">О компании</h2>
+         <div class="about__content">
+           <p>
+             Элкуб это компания, состоящая из опытных руководителей, высоко
+             квалифицированного инженерного и производственного персонала. ООО ПК
+             «Элкуб» является правообладателем торговых марок «ElCub» и «ElSmart».
+           </p>
+           <p>
+             Электрооборудование этих марок аттестовано и успешно эксплуатируется на
+             объектах гражданского строительства, «Росавиации», ПАО «РусГидро», МРСК,
+             ОЭК, ГК «Росатом», РЖД и на других объектах энергетической отрасли.
+           </p>
+           <p>
+             Сегодня ООО ПК «Элкуб» осуществляет полный спектр услуг по производству,
+             проектированию, сопровождению и внедрению объектов энергоснабжения, а
+             собственное производство электротехнического оборудования сокращает срок
+             их реализации, что позволяет устанавливать конкурентные цены.
+           </p>
+         </div>
+        </div>
+       <div class="about__text">
+         <img class="" src="images/SU.png" alt="" />
+        </div>
+     </div>
   </div>
 </section>
