--- a/src/html/components/catalog.html
+++ b/src/html/components/catalog.html
@@ -1,36 +1,64 @@
-<section id="catalog" class="catalog">
-    <div class="container">
-        <h2 class="title">Каталог продукции</h2>
-        <ul class="catalog__btns">
-            <li class="catalog__btns-item">
-                <button class="catalog__btn" type="submit">Трансформаторы</button>
-            </li>
-            <li class="catalog__btns-item">
-                <button class="catalog__btn" type="submit">Оборудование 0,4кВ</button>
-            </li>
-            <li class="catalog__btns-item">
-                <button class="catalog__btn" type="submit">Оборудование 6-10-20кв</button>
-            </li>
-            <li class="catalog__btns-item">
-                <button class="catalog__btn" type="submit">Трансформаторные подстанции</button>
-            </li>
-            <li class="catalog__btns-item">
-                <button class="catalog__btn" type="submit">Металические корпуса</button>
-            </li>
-        </ul>
-        <div class="catalog__items">
-            <div class="catalog__item">
-                <img class="catalog__item-img" src="images/catalog-1.png" alt="Товар">
-                <h3 class="catalog__item-title">
-                    <span class="catalog__item-span">Маслянные 20-10/0,4кВ</span>
-                </h3>
+<section class="projects">
+   <div class="container projects__container">
+     <h2 class="title">Наша продукция</h2>
+     <div class="projects__slider swiper-container">
+       <div class="swiper-wrapper">
+         <a class="swiper-slide projects__slide" href="product-01.html" style="background-image: url(images/SU.png);">
+             <div class="projects__slide-info">
+                 <h3 class="projects__slide-title">Оборудование 0,4 кВ</h3>
+             </div>
+         </a>
+         <a class="swiper-slide projects__slide" href="product-02.html" style="background-image: url(images/c-2.png);">
+             <div class="projects__slide-info">
+                 <h3 class="projects__slide-title">Оборудование 6-10-20 кВ</h3>
+             </div>
+         </a>
+         <a class="swiper-slide projects__slide" href="product-03.html" style="background-image: url(images/SU.png);">
+             <div class="projects__slide-info">
+                 <h3 class="projects__slide-title">Металлические корпуса для ЭОМ </h3>
+             </div>
+         </a>
+         <a class="swiper-slide projects__slide" href="product-04.html" style="background-image: url(images/c-5.png);">
+             <div class="projects__slide-info">
+                 <h3 class="projects__slide-title">Трансформаторные подстанции</h3>
+             </div>
+         </a>
+         <a class="swiper-slide projects__slide" href="product-05.html" style="background-image: url(images/items/5-0.2.jpg);">
+            <div class="projects__slide-info">
+                <h3 class="projects__slide-title">Трансформаторы</h3>
             </div>
-            <div class="catalog__item">
-                <img class="catalog__item-img" src="images/catalog-2.png" alt="Товар">
-                <h3 class="catalog__item-title">
-                    <span class="catalog__item-span">Сухие 20-10/0,4кВ</span>
-                </h3>
-            </div>
-        </div>
-    </div>
-</section>
+        </a>
+       </div>
+     </div>
+     <button class="slider-btn projects__btn-prev">
+       <svg
+         width="12"
+         height="19"
+         viewBox="0 0 12 19"
+         xmlns="http://www.w3.org/2000/svg"
+       >
+         <path
+           stroke="#000"
+           stroke-width="2"
+           d="M1.102 10.198l8.905-8.905M10.612 18.293L1.707 9.388"
+         />
+       </svg>
+     </button>
+     <button class="slider-btn projects__btn-next">
+       <svg
+         width="12"
+         height="19"
+         viewBox="0 0 12 19"
+         fill="none"
+         xmlns="http://www.w3.org/2000/svg"
+       >
+         <path
+           stroke="#000"
+           stroke-width="2"
+           d="M10.612 10.198L1.707 1.293M1.102 18.293l8.905-8.905"
+         />
+       </svg>
+     </button>
+   </div>
+ </section>
+ 
