--- a/src/html/components/products.html
+++ b/src/html/components/products.html
@@ -1,5 +1,5 @@
 <div class="container">
-   <div class="well well-sm">
+   <div class="well well-sm"></div>
        <div class="btn-group">
             <h2 class="title">Каталог продукции</h2>
        </div>
@@ -10,7 +10,7 @@
                <img class="group list-group-image" src="images/catalog-1.png" alt="" />
                <div class="caption">
                    <h4 class="group inner list-group-item-heading">
-                       Силовые щиты </h4>
+                     Оборудование 0,4 кВ</h4>
                    <p class="group inner list-group-item-text">
                        Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -27,7 +27,7 @@
                <img class="group list-group-image" src="images/catalog-1.png" alt="" />
                <div class="caption">
                    <h4 class="group inner list-group-item-heading">
-                     Продукт 2</h4>
+                     Оборудование 6-10-20 кВ</h4>
                    <p class="group inner list-group-item-text">
                        Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -44,7 +44,7 @@
                <img class="group list-group-image" src="images/catalog-1.png" alt="" />
                <div class="caption">
                    <h4 class="group inner list-group-item-heading">
-                     Продукт 3</h4>
+                     Металлические корпуса для ЭОМ </h4>
                    <p class="group inner list-group-item-text">
                        Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -61,7 +61,7 @@
                <img class="group list-group-image" src="images/catalog-1.png" alt="" />
                <div class="caption">
                    <h4 class="group inner list-group-item-heading">
-                     Продукт 1</h4>
+                     Трансформаторные подстанции</h4>
                    <p class="group inner list-group-item-text">
                        Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
                        sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
