--- a/src/html/components/projects.html
+++ b/src/html/components/projects.html
@@ -3,30 +3,28 @@
     <h2 class="title">Наши проекты</h2>
     <div class="projects__slider swiper-container">
       <div class="swiper-wrapper">
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-1.jpg);">
+        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/pic-2.png);">
             <div class="projects__slide-info">
-                <h3 class="projects__slide-title">ООО «Дальэнергомост»</h3>
+                <h3 class="projects__slide-title">ПАО «МОЭСК»</h3>
                 <p class="projects__slide-text">поставка мобильной модульной подстанции 35/10(6) кВ</p>
             </div>
         </a>
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-2.jpg);">
+        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/neft.png);">
             <div class="projects__slide-info">
-                <h3 class="projects__slide-title">ПАО «Ленэнерго»</h3>
-                <p class="projects__slide-text">Световое оформление форума “Шубы-2019”</p>
+                <h3 class="projects__slide-title">ПС «Савельевская»ПАО «Оренбургнефть»</h3>
             </div>
         </a>
         <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-1.jpg);">
-            <div class="projects__slide-info">
-                <h3 class="projects__slide-title">ООО «Дальэнергомост»</h3>
-                <p class="projects__slide-text">поставка мобильной модульной подстанции 35/10(6) кВ</p>
-            </div>
-        </a>
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-2.jpg);">
-            <div class="projects__slide-info">
-                <h3 class="projects__slide-title">ПАО «Ленэнерго»</h3>
-                <p class="projects__slide-text">Световое оформление форума “Шубы-2019”</p>
-            </div>
-        </a>
+         <div class="projects__slide-info">
+             <h3 class="projects__slide-title">ООО «Дальэнергомост»</h3>
+             <p class="projects__slide-text">поставка мобильной модульной подстанции 35/10(6) кВ</p>
+         </div>
+     </a>
+     <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-2.jpg);">
+         <div class="projects__slide-info">
+             <h3 class="projects__slide-title">ПАО «Ленэнерго»</h3>
+         </div>
+     </a>
       </div>
     </div>
     <button class="slider-btn projects__btn-prev">
