--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -18,15 +18,19 @@
                 </div>
             </form>
             <div class="footer__data">
-                <div class="footer__data-col">
+                <div class="footer__data-block-address">
                     <h3 class="footer__data-title">Адрес</h3>
-                    <address class="footer__data-address">г. Москва, шосе<br>Энтузиастов, дом 34</address>
+                    <p class="footer__data-address">Офис: 105118, г. Москва, шоссе Энтузиастов, дом 34</p>
+                    <p class="footer__data-address">Производство: г. Кострома, ул. Московская, д. 105</p>
                 </div>
-                <div class="footer__data-col">
+                <div class="footer__data-block-phone">
                     <h3 class="footer__data-title">Телефоны</h3>
                     <a class="footer__data-phone" href="tel:84951110077">8(495)111-00-77</a>
+                    <a class="footer__data-phone" href="tel:84951110077">8(4942)46-14-45<br>доб: 112, 302</a>
                 </div>
             </div>
+            
+            
         </div>
     </div>
     <div class="footer__bottom">
