--- a/src/html/components/services.html
+++ b/src/html/components/services.html
@@ -3,13 +3,12 @@
     <h2 class="title">Наши услуги</h2>
     <div class="services__inner">
       <div class="services__text">
-        Наша компания предоставляет услуги такого то характера текст текст текст
-        текст текст текст текст текст текст текст текст текст текст текст текст
-        текст текст текст текст текст текст м м текст текст текст текст текст
-        текст текст текст текст текст текст текст текст текст текст
+         <p>Служба Сервиса осуществляет весь комплекс электромонтажных работ как для введенных в эксплуатацию объектов, так и для строящихся.</p>
+         <p>Высококвалифицированные рабочие и инженерно-технический персонал проводят  консультации заказчикам, разрабатывают индивидуальную схему обслуживания в соответствии с поступившим техническим заданием. Специалисты компании ежегодно повышают квалификацию и имеют многолетний практический опыт. </p>
+         <p>Контроль качества на всех этапах работы позволяет нам гарантировать отличный результат на длительный срок.</p>
       </div>
       <div class="services__slider swiper-container">
-        <h3 class="services__slider-title">Проектирование</h3>
+        <h3 class="services__slider-title">Вид услуги:</h3>
         <div class="swiper-wrapper services__slider-wrapper">
           <div class="swiper-slide services__slide">
             <div class="services__slide-decor">
@@ -21,20 +20,20 @@
               />
             </div>
             <div class="services__slide-content">
-              <h4 class="services__slide-title">В услугу входит:</h4>
+              <h4 class="services__slide-title">Проектные работы</h4>
               <ul class="services__slide-list">
                 <li class="services__slide-item">
-                  Инженерно-изыскательские работы
+                  Проектирование электрических цепей
                 </li>
                 <li class="services__slide-item">Авторский надзор</li>
                 <li class="services__slide-item">
-                  Разработка и согласование технического задания
+                  Проектирование распределительных и трансформаторных подстанций
                 </li>
                 <li class="services__slide-item">
-                  Разработка и согласование документации,
+                  Проектирование наружного освещения
                 </li>
                 <li class="services__slide-item">
-                  Согласование и прохождениеэкспертизы проекта в гос. органах
+                  Прочие ПИР
                 </li>
               </ul>
             </div>
@@ -49,20 +48,20 @@
               />
             </div>
             <div class="services__slide-content">
-              <h4 class="services__slide-title">В услугу входит:</h4>
+              <h4 class="services__slide-title">Монтажные работы</h4>
               <ul class="services__slide-list">
                 <li class="services__slide-item">
-                  Инженерно-изыскательские работы
+                  Монтаж БКТП, БРТП
                 </li>
-                <li class="services__slide-item">Авторский надзор</li>
+                <li class="services__slide-item">Проекладка кабельных линий</li>
                 <li class="services__slide-item">
-                  Разработка и согласование технического задания
-                </li>
-                <li class="services__slide-item">
-                  Разработка и согласование документации,
+                  Монтаж системы освещения
                 </li>
                 <li class="services__slide-item">
-                  Согласование и прохождениеэкспертизы проекта в гос. органах
+                  Монтаж и пусконаладка электрооборудования
+                </li>
+                <li class="services__slide-item">
+                  Прочием СМР
                 </li>
               </ul>
             </div>
@@ -77,20 +76,17 @@
               />
             </div>
             <div class="services__slide-content">
-              <h4 class="services__slide-title">В услугу входит:</h4>
+              <h4 class="services__slide-title">Энергоаудит</h4>
               <ul class="services__slide-list">
                 <li class="services__slide-item">
-                  Инженерно-изыскательские работы
+                  Энерготехнологическое обследование
                 </li>
                 <li class="services__slide-item">Авторский надзор</li>
                 <li class="services__slide-item">
-                  Разработка и согласование технического задания
+                  Разработка мероприятий и паспорта объекта
                 </li>
                 <li class="services__slide-item">
-                  Разработка и согласование документации,
-                </li>
-                <li class="services__slide-item">
-                  Согласование и прохождениеэкспертизы проекта в гос. органах
+                  Составление программы энергоснабжения
                 </li>
               </ul>
             </div>
