--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -2,12 +2,12 @@
     <div class="container">
         <nav class="menu">
             <div class="logo">
-                <a href="#">
+                <a href="index.html">
                     <img src="./images/logo.png" alt="logo">
                 </a>
             </div>
             <ul>
-                <li><a href="#">Компания</a></li>
+                <li><a href="company.html">Компания</a></li>
                 <li><a href="products.html">Продукция</a></li>
                 <li><a href="#">Услуги</a></li>
                 <li><a href="#">Портфолио</a></li>
