--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,12 +1,18 @@
 .about {
+   display: flex;
     padding: 100px 0;
     font-size: 14px;
     line-height: 19px;
+
+    &__flex {
+       display: flex;
+       justify-content: space-between;
+    }
     &__content {
         margin-top: 126px;
         padding: 0 60px;
         p {
-            margin: 0;
+
             font-weight: 300;
         }
     }
@@ -15,5 +21,11 @@
        display: inline-block;
        margin: 80px 0 0 60px;
        text-decoration: underline;
+    }
+
+    &__text {
+       img {
+         max-width: 400px;
+       }
     }
 }
