--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,15 +4,13 @@
   left: 0;
   width: 100%;
   z-index: 2;
-  padding: 60px;
-  padding-bottom: 0;
   min-height: 130px;
 }
 
 .menu {
   display: flex;
   justify-content: space-evenly;
-  align-items: flex-end;
+  align-items: center;
 }
 
 .logo a{
@@ -26,6 +24,7 @@
 
 .menu ul {
   display: flex;
+  margin: 0;
 }
 
 .menu li + li {
@@ -37,6 +36,7 @@
   line-height: 37px;
   transition: color .5s;
   color: #fff;
+  text-decoration: none;
 }
 
 
