--- a/src/html/components/about.html
+++ b/src/html/components/about.html
@@ -23,7 +23,7 @@
          </div>
         </div>
        <div class="about__text">
-         <img class="" src="images/SU.png" alt="" />
+         <img class="" src="images/about-img.jpeg" alt="" />
         </div>
      </div>
   </div>
