--- a/src/html/components/catalog.html
+++ b/src/html/components/catalog.html
@@ -1,36 +1,36 @@
-<section class="projects">
-   <div class="container projects__container">
-     <h2 class="title">Наша продукция</h2>
-     <div class="projects__slider swiper-container">
+<section class="catalog">
+   <div class="container catalog__container">
+     <h2 class="title">Продукция</h2>
+     <div class="catalog__slider swiper-container">
        <div class="swiper-wrapper">
-         <a class="swiper-slide projects__slide" href="product-01.html" style="background-image: url(images/SU.png);">
+         <a class="swiper-slide catalog__slide" href="product-01.html" style="background-image: url(images/0.png);">
              <div class="projects__slide-info">
                  <h3 class="projects__slide-title">Оборудование 0,4 кВ</h3>
              </div>
          </a>
-         <a class="swiper-slide projects__slide" href="product-02.html" style="background-image: url(images/c-2.png);">
+         <a class="swiper-slide catalog__slide" href="product-02.html" style="background-image: url(images/6-20.png);">
              <div class="projects__slide-info">
                  <h3 class="projects__slide-title">Оборудование 6-10-20 кВ</h3>
              </div>
          </a>
-         <a class="swiper-slide projects__slide" href="product-03.html" style="background-image: url(images/SU.png);">
+         <a class="swiper-slide catalog__slide" href="product-03.html" style="background-image: url(images/MW.png);">
              <div class="projects__slide-info">
-                 <h3 class="projects__slide-title">Металлические корпуса для ЭОМ </h3>
+                 <h3 class="projects__slide-title">Металлические корпуса для ЭОМ</h3>
              </div>
          </a>
-         <a class="swiper-slide projects__slide" href="product-04.html" style="background-image: url(images/c-5.png);">
+         <a class="swiper-slide catalog__slide" href="product-04.html" style="background-image: url(images/0.png);">
              <div class="projects__slide-info">
                  <h3 class="projects__slide-title">Трансформаторные подстанции</h3>
              </div>
          </a>
-         <a class="swiper-slide projects__slide" href="product-05.html" style="background-image: url(images/items/5-0.2.jpg);">
+         <a class="swiper-slide catalog__slide" href="product-05.html" style="background-image: url(images/transform.png);">
             <div class="projects__slide-info">
                 <h3 class="projects__slide-title">Трансформаторы</h3>
             </div>
         </a>
        </div>
      </div>
-     <button class="slider-btn projects__btn-prev">
+     <button class="slider-btn catalog__btn-prev">
        <svg
          width="12"
          height="19"
@@ -44,7 +44,7 @@
          />
        </svg>
      </button>
-     <button class="slider-btn projects__btn-next">
+     <button class="slider-btn catalog__btn-next">
        <svg
          width="12"
          height="19"
