--- a/src/html/components/reasons.html
+++ b/src/html/components/reasons.html
@@ -8,8 +8,8 @@
             </li>
             <li class="reasons__item">
                 <h3 class="reasons__item-title">Вы - особенные!</h3>
-                <p class="reasons__item-text">Наша компания произведёт оборудование согласно Вашей индивидуальной конфигурации. Мы это – 
-                    ПРОЕКТ - ПРОИЗВОДСТВО - ВНЕДРЕНИЕ: берем на себя все стадии для качественного предоставления работ «под ключ».</p>
+                <p class="reasons__item-text">Наша компания произведёт оборудование согласно Вашей индивидуальной конфигурации. Мы это 
+                    ПРОЕКТ, ПРОИЗВОДСТВО, ВНЕДРЕНИЕ: берем на себя все стадии для качественного предоставления работ «под ключ».</p>
             </li>
             <li class="reasons__item">
                 <h3 class="reasons__item-title">Вы получаете экспертную техническую поддержку!</h3>
