--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -6,13 +6,16 @@
                     <img src="./images/logo.png" alt="logo">
                 </a>
             </div>
-            <ul>
-                <li><a href="company.html">Компания</a></li>
-                <li><a href="products.html">Продукция</a></li>
-                <li><a href="#">Услуги</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакты</a></li>
-            </ul>
+            <div class="header__nav">
+               <ul>
+                  <li><a href="company.html">Компания</a></li>
+                  <li><a href="products-main.html">Продукция</a></li>
+                  <li><a href="service-main.html">Услуги</a></li>
+                  <li><a href="projects-main.html">Портфолио</a></li>
+                  <li><a href="vacancy-main.html">Вакансии</a></li>
+                  <li><a href="contacts-main.html">Контакты</a></li>
+              </ul>
+            </div>
         </nav>
     </div>
 </header>
