--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -7,8 +7,12 @@
 @import "services";
 @import "projects";
 @import "partners";
+@import "vacancy";
 @import "footer";
-@import 'products';
+@import "products-main";
+@import "service-main";
+@import "projects-main";
+@import "contacts-main";
 @import 'product-item';
 @import 'company-block';
 @import 'items';
