--- a/src/html/components/projects.html
+++ b/src/html/components/projects.html
@@ -3,28 +3,48 @@
     <h2 class="title">Наши проекты</h2>
     <div class="projects__slider swiper-container">
       <div class="swiper-wrapper">
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/pic-2.png);">
+        <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/pic-2.png);">
             <div class="projects__slide-info">
                 <h3 class="projects__slide-title">ПАО «МОЭСК»</h3>
-                <p class="projects__slide-text">поставка мобильной модульной подстанции 35/10(6) кВ</p>
+                <p class="projects__slide-text">поставка модульного ЗРУ 10 (6) кВ</p>
             </div>
         </a>
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/neft.png);">
+        <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/neft.png);">
             <div class="projects__slide-info">
                 <h3 class="projects__slide-title">ПС «Савельевская»ПАО «Оренбургнефть»</h3>
+                <p class="projects__slide-text">поставка модульной подстанции 35\10 кВ</p>
             </div>
         </a>
-        <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-1.jpg);">
+        <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/project-1.jpg);">
          <div class="projects__slide-info">
              <h3 class="projects__slide-title">ООО «Дальэнергомост»</h3>
-             <p class="projects__slide-text">поставка мобильной модульной подстанции 35/10(6) кВ</p>
+             <p class="projects__slide-text">поставка модульной подстанции 35\10 кВ</p>
          </div>
      </a>
-     <a class="swiper-slide projects__slide" href="#" style="background-image: url(images/project-2.jpg);">
+     <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/project-2.jpg);">
          <div class="projects__slide-info">
              <h3 class="projects__slide-title">ПАО «Ленэнерго»</h3>
+             <p class="projects__slide-text">поставка модульного ЗРУ 10 (6) кВ</p>
          </div>
      </a>
+     <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/elo5.png);">
+      <div class="projects__slide-info">
+          <h3 class="projects__slide-title">ПС «Созвездие» ПАО «МРСК Центра и Приволжья»</h3>
+          <p class="projects__slide-text">поставка модульной подстанции 35\10 кВ</p>
+      </div>
+  </a>
+  <a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/elo6.png);">
+   <div class="projects__slide-info">
+       <h3 class="projects__slide-title">ММБТП 10/20 кВ 25 МВА ПАО «МОЭСК»</h3>
+       <p class="projects__slide-text">поставка модульной подстанции 35\10 кВ</p>
+   </div>
+</a>
+<a class="swiper-slide projects__slide" href="projects-main.html" style="background-image: url(images/elo7.png);">
+   <div class="projects__slide-info">
+       <h3 class="projects__slide-title">ПС No210 «Ленсоветовская»ПАО «Ленэнерго»</h3>
+       <p class="projects__slide-text">поставка модульной подстанции 35\10 кВ</p>
+   </div>
+</a>
       </div>
     </div>
     <button class="slider-btn projects__btn-prev">
