--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -26,7 +26,7 @@
                 <div class="footer__data-block-phone">
                     <h3 class="footer__data-title">Телефоны</h3>
                     <a class="footer__data-phone" href="tel:84951110077">8(495)111-00-77</a>
-                    <a class="footer__data-phone" href="tel:84951110077">8(4942)46-14-45<br>доб: 112, 302</a>
+                    <a class="footer__data-phone" href="tel:84951110077">8(4942)46-14-45</a>
                 </div>
             </div>
             
@@ -37,10 +37,10 @@
         <div class="container">
             <div class="footer__menu">
                 <ul>
-                    <li><a href="#">Компания</a></li>
-                    <li><a href="#">Продукция</a></li>
-                    <li><a href="#">Услуги</a></li>
-                    <li><a href="#">Портфолио</a></li>
+                    <li><a href="company.html">Компания</a></li>
+                    <li><a href="products-main.html">Продукция</a></li>
+                    <li><a href="service-main.html">Услуги</a></li>
+                    <li><a href="projects-main.html">Портфолио</a></li>
                     <li><a href="#">Контакты</a></li>
                 </ul>
             </div>
