--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -1,6 +1,6 @@
 .about {
    display: flex;
-    padding: 100px 0;
+    padding: 100px 60px;
     font-size: 14px;
     line-height: 19px;
 
@@ -10,7 +10,7 @@
     }
     &__content {
         margin-top: 126px;
-        padding: 0 60px;
+        padding: 0 60px 0 0;
         p {
 
             font-weight: 300;
@@ -24,6 +24,8 @@
     }
 
     &__text {
+      display: flex;
+      align-items: flex-end;
        img {
          max-width: 400px;
        }
