--- a/src/scss/components/_product-item.scss
+++ b/src/scss/components/_product-item.scss
@@ -10,6 +10,7 @@
       display: flex;
       flex-wrap: wrap;
       padding: 50px 0;
+      justify-content: center;
       &-item {
          width: 30%;
          display: flex;
@@ -21,8 +22,8 @@
          justify-content: center;
 
          img {
-            height: 300px;
-            width: 250px;
+            height: 270px;
+            width: 100%;
          }
       }
 
