--- a/src/scss/components/_projects.scss
+++ b/src/scss/components/_projects.scss
@@ -1,5 +1,5 @@
 .projects {
-  padding: 0 0 100px;
+   padding: 100px 60px;
   &__container {
     position: relative;
   }
@@ -22,15 +22,14 @@
     position: absolute;
     bottom: 35px;
     right: 19px;
-    background-color: #fff;
-    padding: 10px 25px 25px;
-    max-width: 200px;
+    background-color: #fae060;
+    padding: 10px 25px 10px;
   }
 
   &__slide-title {
     font-family: "Oswald";
     font-weight: 400;
-    font-size: 18px;
+    font-size: 14px;
     line-height: 27px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
