--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  padding: 100px 0;
+   padding: 100px 60px;
   &__inner {
     margin-top: 40px;
     display: flex;
@@ -10,7 +10,6 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding: 0 60px;
     font-weight: 300;
     font-size: 14px;
   }
@@ -18,7 +17,7 @@
   &__slider {
     border: 3px solid #000000;
     padding: 20px;
-    width: 665px;
+    max-width: 665px;
     flex-shrink: 0;
     min-width: 0;
   }
